[package]
name = "f1-tray"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "shell-open"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", featues = ["native-tls"] }
tokio-stream = "0.1.15"
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
tokio = { version = "1.38.0", features = ["time", "macros"] }
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "chrono",
] }
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
heck = "0.5.0"
dotenvy = "0.15.7"
tungstenite = { version = "0.23.0", features = ["url"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
